--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
  <div class=sidebyside>
     <a class="tooltipster"
   title="Dolls" href="/Dolls">
-  <img src="/Art/OC/Blaire%20Dorothy/Blairethumb1.PNG" width="33.33%" style="float:left;"></a>
+  <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="float:left;"></a>
     <a class="tooltipster"
-  title="Blaire & Dorothy" href="/GraphicDesign">
-  <img src="/Art/OC/Blaire%20Dorothy/dot%20thumb.PNG" width="33.33%" style="float:left;"></a>
+  title="Graphic Design" href="/GraphicDesign">
+  <img src="https://files.catbox.moe/ue8wu0.png" width="33.33%" style="float:left;"></a>
     <a class="tooltipster"
   title="Turner & Cosmo" href="/WebDesign">
   <img src="/Art/OC/Turner%20Cosmo/ucosmo%20thumb.PNG" width="33.33%" style="float:left;"></a>
