--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <head>
 	<meta name="viewport" content="width=800px, initial-scale=1">
 	<meta charset="utf-8">
-	<title>ꕥꕥꕥꕥ</title>
-  <link rel="icon" href="https://er1k4.neocities.org/assets/twojamie_makeout_haha.png" type="image/png">
+	<title>ꕥErika Ornelasꕥ</title>
+  <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
 	<link href="style.css" rel="stylesheet" type="text/css" media="all">
 	<link href="lastfm.css" rel="stylesheet" type="text/css" media="all">
       <meta property="og:image" content="https://er1k4.neocities.org/assets/thumbnails/site%20thumb1home.png" />
