--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
  <div class=sidebyside>
     <a class="tooltipster"
   title="Dolls" href="/Dolls">
-  <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style=" width: 200px; height: 150px; float:left;"></a>
+  <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 200px; height: 150px; float:left;"></a>
     <a class="tooltipster"
   title="Graphic Design" href="/GraphicDesign">
   <img src="https://files.catbox.moe/ue8wu0.png" width="33.33%" style="float:left;"></a>
