--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
  <div class=sidebyside>
     <a class="tooltipster"
   title="Dolls" href="/Dolls">
-  <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 200px; height: 150px; float:left;"></a>
+  <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;"></a>
     <a class="tooltipster"
   title="Graphic Design" href="/GraphicDesign">
-  <img src="https://files.catbox.moe/ue8wu0.png" width="33.33%" style="float:left;"></a>
+  <img src="https://files.catbox.moe/ue8wu0.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;"></a>
     <a class="tooltipster"
   title="Turner & Cosmo" href="/WebDesign">
-  <img src="/Art/OC/Turner%20Cosmo/ucosmo%20thumb.PNG" width="33.33%" style="float:left;"></a>
+  <img src="/Art/OC/Turner%20Cosmo/ucosmo%20thumb.PNG" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;"></a>
     <a class="tooltipster"
-  title="Turner & Cosmo" href="/Traditional">
-  <img src="/Art/OC/Turner%20Cosmo/turner%20thumb.PNG" width="33.33%" style="float:left;"></a>
+  title="Traditional Art" href="/Traditional">
+  <img src="https://files.catbox.moe/la65t0.jpeg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;"></a>
       <a class="tooltipster"
   title="Bnuuy" href="/Art/OC/Bnuuy">
-  <img src="/Art/OC/Bnuuy/bnuuysquare.png" width="33.33%" style="float:left;"></a>
+  <img src="/Art/OC/Bnuuy/bnuuysquare.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;"></a>
   
 
   
