--- a/index.html
+++ b/index.html
@@ -75,13 +75,11 @@
   <img src="https://files.catbox.moe/ue8wu0.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;"></a>
     <a class="tooltipster"
   title="Turner & Cosmo" href="/WebDesign">
-  <img src="/Art/OC/Turner%20Cosmo/ucosmo%20thumb.PNG" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;"></a>
+  <img src="https://files.catbox.moe/gvcsfc.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;"></a>
     <a class="tooltipster"
   title="Traditional Art" href="/Traditional">
   <img src="https://files.catbox.moe/la65t0.jpeg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;"></a>
-      <a class="tooltipster"
-  title="Bnuuy" href="/Art/OC/Bnuuy">
-  <img src="/Art/OC/Bnuuy/bnuuysquare.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;"></a>
+     
   
 
   
