--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       <meta property="og:image" content="https://er1k4.neocities.org/assets/thumbnails/site%20thumb1home.png" />
   <meta property="twitter:card" content="https://er1k4.neocities.org/assets/thumbnails/site%20thumb1home.png">
 <script src="lastfm.js" defer></script>
+	
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap" rel="stylesheet">
+
 </head>
   
   
