--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 		<div class="nav" border="33333;">
 				<a href="/About" >About</a>
       <p>
-				<a href="/News" color="border">Portfolio</a>
+				<a href="/Contact" color="border">Contact</a>
          <p>
-				<a href="/Blog" color="border">Contact</a>
+				<a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/" color="border">Linkedin</a>
         	</div></lis>
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
   
