--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
   <meta property="twitter:card" content="https://er1k4.neocities.org/assets/thumbnails/site%20thumb1home.png">
 <script src="lastfm.js" defer></script>
 	
-	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Bagel+Fat+One&family=DM+Serif+Text:ital@0;1&family=Lexend:wght@100..900&display=swap" rel="stylesheet">
 </head>
   
   
