--- a/Dolls.html
+++ b/Dolls.html
@@ -34,7 +34,7 @@
         	</div></lis>
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
   
-
+<div class="container">
 	
 		<section class="full">
 
@@ -62,8 +62,7 @@
 
 	</section>
 	</div>
-	
-			
+</div>	
 	</div>
 
   
