--- a/Dolls.html
+++ b/Dolls.html
@@ -46,6 +46,8 @@
   <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
   
   <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+	 <h1>Vanya - 16" Bisque Doll</h1>
+	 <p>balls</p>
   
   <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
   
