--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 			</p>
         Click on one of the tabs on the side, or an image below to get started!
 			</h3>
+
+	     <h2> THIS SITE IS SUPER UNDER CONSTRUCTION!! </h2> <p>
+		     
+	     </p><IMG SRC="https://er1k4.neocities.org/assets/pikaconstruction.gif" STYLE="width:40%;">
 		</section>
 		</div>
   -
