--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			</h3>
 
 	     <h2> THIS SITE IS SUPER UNDER CONSTRUCTION!! </h2> <p>
-		     
+		     If you wanna get a look at a <i>better</i> website with more meat on it's bones check out my <a href="https://er1k4.neocities.org"> neocities!</a>
 	     </p><IMG SRC="https://er1k4.neocities.org/assets/pikaconstruction.gif" STYLE="width:40%;">
 		</section>
 		</div>
