--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         Click on one of the tabs on the side, or an image below to get started!
 			</h3>
 
-	     <h2> THIS SITE IS SUPER UNDER CONSTRUCTION!! </h2> <p>
-		     If you wanna get a look at a <i>better</i> website with more meat on it's bones check out my <a href="https://er1k4.neocities.org"> neocities!</a>
-	     </p><IMG class="center" SRC="https://er1k4.neocities.org/assets/pikaconstruction.gif" STYLE="width:40%;">
+	     <h2> THIS SITE IS SUPER UNDER CONSTRUCTION!!  <p>
+		     If you wanna get a look at a <i>better</i> website with more meat on it's bones, then check out my <a href="https://er1k4.neocities.org"> neocities!</a>
+	     </p><IMG class="center" SRC="https://er1k4.neocities.org/assets/pikaconstruction.gif" STYLE="width:40%;"> </h2>
 		</section>
 		</div>
   -
