--- a/Dolls.html
+++ b/Dolls.html
@@ -48,6 +48,8 @@
   <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
 	 <h2>Vanya - 16" Bisque Doll</h2>
 	 <p>balls</p>
+ </div>
+ <div class=sidebyside>
   <P></P>
   <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
   
