--- a/404.html
+++ b/404.html
@@ -31,16 +31,16 @@
 				<a href="/Contact" color="border">Contact</a>
          <p>
 				<a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/" color="border">Linkedin</a>
+         <p>
+				<a href="/" color="border">Home</a>
         	</div></lis>
-        <a href="/" >Home</a>
       <p>
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
   
 	<div class="container">
 		<section class="half">
        <p>
-      oops!!
-		     <IMG  SRC="https://er1k4.neocities.org/assets/pikaconstruction.gif" STYLE="width:40%;"> </h2>
+      <h1>oops!!</h1>
 		</section>
 		</div>
   -
