--- a/Dolls.html
+++ b/Dolls.html
@@ -36,7 +36,7 @@
   
 <div class="container">
 	
-		<section class="full">
+<section class="full">
 
 
  <div class=sidebyside>
@@ -50,6 +50,9 @@
 	 <p>balls</p>
 	 <p></p>
  </div>
+</section>
+	<section class="full">
+
  <div class=sidebyside>
   <P></P>
   <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
@@ -69,10 +72,6 @@
 	</div>
 </div>	
 	</div>
-
-  
-
-
   	
  </div>
 
