--- a/404.html
+++ b/404.html
@@ -40,7 +40,10 @@
 	<div class="container">
 		<section class="half">
        <p>
-      <h1>oops!!</h1>
+      <h2>oops!!
+      
+      <img src="https://er1k4.neocities.org/assets/pikadrill.gif">
+      </h2>
 		</section>
 		</div>
  
