--- a/Dolls.html
+++ b/Dolls.html
@@ -34,12 +34,10 @@
         	</div></lis>
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
   
-<div class="container">
+<div class="container" class=sidebyside>
 	
 <section class="full">
 
-
- <div class=sidebyside>
   
   <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
   
