--- a/Dolls.html
+++ b/Dolls.html
@@ -34,7 +34,9 @@
         	</div></lis>
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
   
-<div class="container" class=sidebyside>
+<div class="container">
+
+<div class="sidebyside">
 	
 <section class="full">
 
@@ -48,9 +50,10 @@
 	 <p>balls</p>
 	 <p></p>
  </div>
+</div>
 </section>
 	<section class="full">
-
+<div class="container">
  <div class=sidebyside>
   <P></P>
   <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
