--- a/Dolls.html
+++ b/Dolls.html
@@ -32,7 +32,7 @@
          <p>
 				<a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/" color="border">Linkedin</a>
         	</div></lis>
-  <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
+	<a href="/">  <h1 style="left:10%;"><i>Erika Ornelas</I></h1> </a>
   
 <div class="container">
 
