--- a/Dolls.html
+++ b/Dolls.html
@@ -52,29 +52,25 @@
  </div>
 </div>
 </section>
-	<section class="full">
-<div class="container">
- <div class=sidebyside>
-  <P></P>
-  <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
-  
-  <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
-  
-  <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
-     
-  
-
-  
-
-		</section>
 	
+<div class="container">
 
-	</section>
-	</div>
-</div>	
-	</div>
-  	
+<div class="sidebyside">
+	
+<section class="full">
+
+  
+  <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  
+  <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  
+  <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+	 <h2>Vanya - 16" Bisque Doll</h2>
+	 <p>balls</p>
+	 <p></p>
  </div>
+</div>
+</section>
 
 	<footer>
 </footer>
