--- a/404.html
+++ b/404.html
@@ -41,8 +41,9 @@
 		<section class="half">
        <p>
       <h2>oops!!
+	      <P></P>
       
-      <img src="https://er1k4.neocities.org/assets/pikadrill.gif">
+      <img src="https://er1k4.neocities.org/assets/pikadrill.gif" style="width:30%">
       </h2>
 		</section>
 		</div>
