--- a/404.html
+++ b/404.html
@@ -35,7 +35,7 @@
 				<a href="/" color="border">Home</a>
         	</div></lis>
       <p>
-  <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
+	<a href="/">  <h1 style="left:10%;"><i>Erika Ornelas</I></h1> </a>
   
 	<div class="container">
 		<section class="half">
