--- a/404.html
+++ b/404.html
@@ -31,8 +31,6 @@
 				<a href="/Contact" color="border">Contact</a>
          <p>
 				<a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/" color="border">Linkedin</a>
-         <p>
-				<a href="/" color="border">Home</a>
         	</div></lis>
       <p>
 	<a href="/">  <h1 style="left:10%;"><i>Erika Ornelas</I></h1> </a>
@@ -45,6 +43,7 @@
       
       <img src="https://er1k4.neocities.org/assets/pikadrill.gif" style="width:30%">
       </h2>
+	       <a href="javascript:history.back()" style=color:#ffc7e7;>go back</a>
 		</section>
 		</div>
  
