--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
   <lis>
 		<div class="nav" border="33333;">
+				<a href="/" color="border">Home</a>
+		 <p>
 				<a href="/About" >About</a>
       <p>
 				<a href="/Contact" color="border">Contact</a>
