--- a/Dolls.html
+++ b/Dolls.html
@@ -26,13 +26,15 @@
 
   <lis>
 		<div class="nav" border="33333;">
+				<a href="/" color="border">Home</a>
+		 <p>
 				<a href="/About" >About</a>
       <p>
 				<a href="/Contact" color="border">Contact</a>
          <p>
 				<a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/" color="border">Linkedin</a>
         	</div></lis>
-	<a href="/">  <h1 style="left:10%;"><i>Erika Ornelas</I></h1> </a>
+	 <h1 style="left:10%;"><i>Erika Ornelas</I></h1> 
   
 <div class="container">
 
