--- a/404.html
+++ b/404.html
@@ -25,7 +25,9 @@
  
 
   <lis>
-		<div class="nav" border="33333;">
+<div class="nav" border="33333;">
+				<a href="/" color="border">Home</a>
+		 <p>
 				<a href="/About" >About</a>
       <p>
 				<a href="/Contact" color="border">Contact</a>
@@ -33,7 +35,7 @@
 				<a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/" color="border">Linkedin</a>
         	</div></lis>
       <p>
-	<a href="/">  <h1 style="left:10%;"><i>Erika Ornelas</I></h1> </a>
+<h1 style="left:10%;"><i>Erika Ornelas</I></h1>
   
 	<div class="container">
 		<section class="half">
