--- a/About.html
+++ b/About.html
@@ -38,7 +38,14 @@
   
 	<div class="container">
 		<section class="half">
-       <img src="https://files.catbox.moe/s8222k.png" style="left:0;">
+       <img src="https://files.catbox.moe/s8222k.png" style="width:33.33%;left:0;">
+			<h1 font-family: "Akaya Kanadaka";>
+				I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </h1>
+			<p>
+				<h2 style="text-align: left;"> 
+				Additionally, I have been trained in publication design, UI/UX design, typography, painting, and traditional sculpture. My liberal arts education at Lewis University has helped further diversify my skillsets outside of the design realm. <p></p>
+I aim to design dolls that are both able to be cherished for life and provide meaningful play value. I have said since I was in high school that if I can make a single doll that a single person cherishes for life, then all of my life's work will have been worth it.</h2>
+			</p>
 
 		</section>
 	
