--- a/About.html
+++ b/About.html
@@ -39,12 +39,13 @@
 	<div class="container">
 		<section class="half">
        <img src="https://files.catbox.moe/s8222k.png" style="width:33.33%;left:0;">
-			<h1 style="font-family: 'Akaya Kanadaka'; width:60%">
-				I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </h1>
+			<p style="font-family: 'Akaya Kanadaka'; width:60%">
+				I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </p>
 			<p>
-				<h2 style="text-align: left; width:60%;"> 
+				<p style="text-align: left; width:60%;"> 
 				Additionally, I have been trained in publication design, UI/UX design, typography, painting, and traditional sculpture. My liberal arts education at Lewis University has helped further diversify my skillsets outside of the design realm. <p></p>
-I aim to design dolls that are both able to be cherished for life and provide meaningful play value. I have said since I was in high school that if I can make a single doll that a single person cherishes for life, then all of my life's work will have been worth it.</h2>
+I aim to design dolls that are both able to be cherished for life and provide meaningful play value. I have said since I was in high school that if I can make a single doll that a single person cherishes for life, then all of my life's work will have been worth it.
+		</p>
 			</p>
 
 		</section>
