--- a/About.html
+++ b/About.html
@@ -39,8 +39,8 @@
 	<div class="container">
 		<section class="half">
        <img src="https://files.catbox.moe/s8222k.png" style="width:33.33%;left:0;">
-			<p style="font-family: 'Akaya Kanadaka'; width:60%">
-				I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </p>
+			<style="font-family: 'Akaya Kanadaka'; width:60%; font-size:30px;">
+				I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </style>
 			<p>
 				<p style="text-align: left; width:60%;"> 
 				Additionally, I have been trained in publication design, UI/UX design, typography, painting, and traditional sculpture. My liberal arts education at Lewis University has helped further diversify my skillsets outside of the design realm. <p></p>
