--- a/About.html
+++ b/About.html
@@ -39,7 +39,7 @@
 	<div class="container">
 		<section class="half">
        <img src="https://files.catbox.moe/s8222k.png" style="display:flex; width:33.33%;left:0;">
-			<div style="font-family: 'Akaya Kanadaka'; width:60%; font-size:30px;">
+			<abt style="width:60%;">
 				I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </div>
 
 				<p style="font-family: 'Lexend';text-align: left; width:60%;"> 
