--- a/About.html
+++ b/About.html
@@ -40,7 +40,7 @@
 		<section class="half">
        <img src="https://files.catbox.moe/s8222k.png" style="display:flex; width:33.33%;left:0;">
 			<abt style="width:60%;">
-				I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </div>
+				I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </abt>
 
 				<p style="font-family: 'Lexend';text-align: left; width:60%;"> 
 				Additionally, I have been trained in publication design, UI/UX design, typography, painting, and traditional sculpture. My liberal arts education at Lewis University has helped further diversify my skillsets outside of the design realm. <p></p>
