--- a/About.html
+++ b/About.html
@@ -37,7 +37,7 @@
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
   
 	<div class="container">
-		<section class="half">
+		<section class="halfs">
        <img src="https://files.catbox.moe/s8222k.png" style="display:flex; width:33.33%;left:0;">
 			<abt style="width:60%;">
 				I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </abt>
