--- a/About.html
+++ b/About.html
@@ -35,10 +35,10 @@
 				<a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/" color="border">Linkedin</a>
         	</div></lis>
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
-  
+         <img src="https://files.catbox.moe/s8222k.png" style="display:flex; width:33.33%;left:10%; top:15%;">
 	<div class="container">
 		<section class="halfs">
-       <img src="https://files.catbox.moe/s8222k.png" style="display:flex; width:33.33%;left:0;">
+
 			<abt style="width:60%;">
 				I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </abt>
 
