--- a/index.html
+++ b/index.html
@@ -39,11 +39,9 @@
 	<div class="container">
 		<section class="half">
        <p>
-      <h2 style="font-size:30px;">Welcome to my hand made website!</h2>
+      <h2 style="font-size:30px;">Welcome to my hand-made website!</h2>
 		
-			<h3 style="font-size:20px;"> Here you will find various pieces from and for my art portfolio.
-			<p>
-			 This site itself acts as a piece from my portfolio!
+			<h3 style="font-size:20px;"> Here you will find various pieces from and for my art portfolio, This site itself acts as a piece from my portfolio as well. I believe in a template-free approach to making websites, and have spent the past half year creating my own "old-web" style site!
 			</p>
         Click on one of the tabs on the side, or an image below to get started!
 			</h3>
