--- a/About.html
+++ b/About.html
@@ -36,7 +36,7 @@
         	</div></lis>
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
          <img src="https://files.catbox.moe/s8222k.png" style="display:flex; width:33.33%;left:10%; top:15%;">
-	<div class="container" style="align:right; width:50%;">
+	<div class="container" style="right: 10px; width:50%;">
 		<section class="halfs">
 
 			<abt style="width:60%;">
