--- a/About.html
+++ b/About.html
@@ -35,7 +35,7 @@
 				<a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/" color="border">Linkedin</a>
         	</div></lis>
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
-         <img src="https://files.catbox.moe/s8222k.png" style="display:flex; width:33.33%;left:10%; top:15%;">
+         <img src="https://files.catbox.moe/s8222k.png" style="position:fixed; display:flex; width:33.33%;left:10%; top:15%;">
 	<div class="container" style="right: 10px; width:50%;">
 		<section class="halfs">
 
