--- a/About.html
+++ b/About.html
@@ -35,8 +35,9 @@
 				<a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/" color="border">Linkedin</a>
         	</div></lis>
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
+	<div justify-content: space-evenly;>
          <img src="https://files.catbox.moe/s8222k.png" style="position:fixed; display:flex; width:33.33%;left:5%; top:15%;">
-	<div class="container" style="margin-right:30px; width:50%; display: inline-flex; float:right;margin-right:30px;">
+	<div >
 		<section class="halfs">
 
 			<abt style="width:60%;">
