--- a/About.html
+++ b/About.html
@@ -38,21 +38,18 @@
 	<div justify-content: space-evenly;>
          <img src="https://files.catbox.moe/s8222k.png" style="position:fixed; display:flex; width:33.33%;left:5%; top:15%;">
 	<div class="container" style="margin-right:30px; width:50%; >
-		<section class="halfs">
+
 
 			<abt style="width:60%;">
 				I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </abt>
 
 				<p style="font-family: 'Lexend';text-align: left; width:60%;"> 
-				Additionally, I have been trained in publication design, UI/UX design, typography, painting, and traditional sculpture. My liberal arts education at Lewis University has helped further diversify my skillsets outside of the design realm. <p style="font-family: 'Lexend';text-align: left; width:60%;"> 
+				Additionally, I have been trained in publication design, UI/UX design, typography, painting, and traditional sculpture. My liberal arts education at Lewis University has helped further diversify my skillsets outside of the design realm. 
+				</p>
+		<p style="font-family: 'Lexend';text-align: left; width:60%;"> 
 I aim to design dolls that are both able to be cherished for life and provide meaningful play value. I have said since I was in high school that if I can make a single doll that a single person cherishes for life, then all of my life's work will have been worth it.
 		</p>
-			</p>
 
-		</section>
-	
-
-	</section>
 	</div>
 	
 
