--- a/About.html
+++ b/About.html
@@ -40,7 +40,7 @@
 	<div class="container" style="margin-right:30px; width:50%; >
 
 
-			<abt style="width:60%;">
+			<abt>
 				I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </abt>
 
 				<p style="font-family: 'Lexend';text-align: left; width:60%;"> 
