--- a/About.html
+++ b/About.html
@@ -36,7 +36,7 @@
         	</div></lis>
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
 	<div justify-content: center;>
-         <img src="https://files.catbox.moe/s8222k.png" style="position:fixed; display:flex; width:33.33%;left:5%; top:15%;">
+         <img src="https://files.catbox.moe/s8222k.png" style="display:flex; width:33.33%;left:5%; top:15%;">
 	<div class="container" style="margin-right:30px; right:30px;  width:50%;">
 
 
