--- a/About.html
+++ b/About.html
@@ -35,7 +35,7 @@
 				<a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/" color="border">Linkedin</a>
         	</div></lis>
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
-	<div justify-content: center; display:flex;>
+	<div justify-content: center; display:inline-block;>
          <img src="https://files.catbox.moe/s8222k.png" style=" width:33.33%;left:5%; top:15%;">
 	<div class="container" style="margin-right:30px; right:30px;  width:50%;">
 
