--- a/About.html
+++ b/About.html
@@ -37,11 +37,8 @@
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
 	<div justify-content: center; display:inline-block;>
          <img src="https://files.catbox.moe/s8222k.png" style=" width:33.33%;left:5%; top:15%;">
-	<div class="container" style="margin-right:30px; right:30px;  width:50%;">
-
-
-			<abt>
-				I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </abt>
+		<div class="container" style="width:50%;">
+<abt>I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </abt>
 
 				<p style="font-family: 'Lexend';text-align: left; width:60%;"> 
 				Additionally, I have been trained in publication design, UI/UX design, typography, painting, and traditional sculpture. My liberal arts education at Lewis University has helped further diversify my skillsets outside of the design realm. 
@@ -50,14 +47,8 @@
 I aim to design dolls that are both able to be cherished for life and provide meaningful play value. I have said since I was in high school that if I can make a single doll that a single person cherishes for life, then all of my life's work will have been worth it.
 		</p>
 
+		</div>
 	</div>
-	
-
-  
-
-
-  	
- </div>
 
 	<footer>
 		
