--- a/About.html
+++ b/About.html
@@ -36,7 +36,9 @@
         	</div></lis>
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
 	<div justify-content: center; display:inline-block;>
-         <img src="https://files.catbox.moe/s8222k.png" style=" width:33.33%;left:5%; top:15%;">
+         <div display:inline-block;>
+		 <img src="https://files.catbox.moe/s8222k.png" style=" width:33.33%;left:5%; top:15%;">
+	 </div>
 		<div class="container" style="width:50%;">
 <abt>I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </abt>
 
