--- a/About.html
+++ b/About.html
@@ -8,7 +8,7 @@
 	<title>ꕥErika Ornelasꕥ</title>
   <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
 	<link href="style.css" rel="stylesheet" type="text/css" media="all">
-	<link href="lastfm.css" rel="stylesheet" type="text/css" media="all">
+	<link href="abt.css" rel="stylesheet" type="text/css" media="all">
       <meta property="og:image" content="https://er1k4.neocities.org/assets/thumbnails/site%20thumb1home.png" />
   <meta property="twitter:card" content="https://er1k4.neocities.org/assets/thumbnails/site%20thumb1home.png">
 <script src="lastfm.js" defer></script>
