--- a/About.html
+++ b/About.html
@@ -53,18 +53,23 @@ I aim to design dolls that are both able to be cherished for life and provide me
 	</div>
 <div class="abtcontainer">
 
-  <div style="background-color:#FFF4A3;">
-    <h2>London</h2>
-    <p>London is the capital city of England.</p>
-    <p>London has over 9 million inhabitants.</p>
+  <div>
+    <img src="https://files.catbox.moe/s8222k.png" >
   </div>
   
   
   
-  <div style="background-color:#D9EEE1;">
-    <h2>Rome</h2>
-    <p>Rome is the capital city of Italy.</p>
-    <p>Rome has over 4 million inhabitants.</p>
+  <div>
+    
+<abt>I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </abt>
+
+				<p style="font-family: 'Lexend';text-align: left; width:60%;"> 
+				Additionally, I have been trained in publication design, UI/UX design, typography, painting, and traditional sculpture. My liberal arts education at Lewis University has helped further diversify my skillsets outside of the design realm. 
+				</p>
+		<p style="font-family: 'Lexend';text-align: left; width:60%;"> 
+I aim to design dolls that are both able to be cherished for life and provide meaningful play value. I have said since I was in high school that if I can make a single doll that a single person cherishes for life, then all of my life's work will have been worth it.
+		</p>
+
   </div>
 
 </div>
