--- a/About.html
+++ b/About.html
@@ -59,7 +59,7 @@ I aim to design dolls that are both able to be cherished for life and provide me
   
   
   
-  <div>
+ <div class="container" style="display:flex; width:50%;">
     
 <abt>I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </abt>
 
