--- a/About.html
+++ b/About.html
@@ -54,7 +54,7 @@ I aim to design dolls that are both able to be cherished for life and provide me
 <div class="abtcontainer">
 
   <div>
-    <img src="https://files.catbox.moe/s8222k.png" >
+    <img src="https://files.catbox.moe/s8222k.png" style="width:40%">
   </div>
   
   
