--- a/About.html
+++ b/About.html
@@ -39,7 +39,7 @@
 <div class="abtcontainer">
 
   <div>
-    <img src="https://files.catbox.moe/s8222k.png" style="width:80%">
+    <img src="https://files.catbox.moe/s8222k.png" style="justify:center;width:80%">
   </div>
   
   
