--- a/About.html
+++ b/About.html
@@ -57,11 +57,15 @@ I aim to design dolls that are both able to be cherished for life and provide me
   </div>
 
 </div>
-	<footer>
-		
+		<footer>
+		<p></p>
 <marquee behavior="alternate">
 		    <img src="https://pngimg.com/d/robot_vacuum_PNG29.png" style="width:80px;" title="don't mind the roomba,, clearing up some clutter">
 		    </marquee>
-</footer>
+		<p>
+		</p>
+
+	<i>© Erika Ornelas, 2025</i>
+	</footer>
 </body>		  
 </html>
