--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
-	<title>ꕥErika Ornelasꕥ</title>
+	<title>ꕥAboutꕥ</title>
   <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
 	<link href="style.css" rel="stylesheet" type="text/css" media="all">
 	<link href="lastfm.css" rel="stylesheet" type="text/css" media="all">
@@ -35,7 +35,9 @@
 				<a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/" color="border">Linkedin</a>
         	</div></lis>
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
-  
+  <marquee behavior="alternate">
+		    <img src="https://pngimg.com/d/robot_vacuum_PNG29.png" style="width:80px;" title="don't mind the roomba,, clearing up some clutter">
+		    </marquee>
 	<div class="container">
 		<section class="half">
        <p>
@@ -92,9 +94,7 @@
 
 
 		<p></p>
-<marquee behavior="alternate">
-		    <img src="https://pngimg.com/d/robot_vacuum_PNG29.png" style="width:80px;" title="don't mind the roomba,, clearing up some clutter">
-		    </marquee>
+
 		<p>
 		</p>
 	<footer>
