--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
-	<title>ꕥAboutꕥ</title>
+	<title>ꕥErika Ornelasꕥ</title>
+
   <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
 	<link href="style.css" rel="stylesheet" type="text/css" media="all">
 	<link href="lastfm.css" rel="stylesheet" type="text/css" media="all">
