--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
   
 <center=left>
 <body>
-
- 
-
   <lis>
 		<div class="nav" border="33333;">
 				<a href="/" color="border">Home</a>
@@ -37,7 +34,7 @@
         	</div></lis>
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
   <marquee behavior="alternate">
-		    <img src="https://pngimg.com/d/robot_vacuum_PNG29.png" style="width:80px;" title="don't mind the roomba,, clearing up some clutter">
+		    <img src="https://pngimg.com/d/robot_vacuum_PNG29.png" style="width:80px; position:absolute;" title="don't mind the roomba,, clearing up some clutter">
 		    </marquee>
 	<div class="container">
 		<section class="half">
