--- a/Dolls.html
+++ b/Dolls.html
@@ -45,9 +45,11 @@
   
   <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
   
-  <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/w2bryr.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
   
-  <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/pa4bus.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+	
+  <img src="https://files.catbox.moe/t5hei2.jpeg" width="100%" style="object-fit:cover;  float:left;">
 	 <h2>Vanya - 16" Bisque Doll</h2>
 	 <p>balls</p>
 	 <p></p>
