--- a/Dolls.html
+++ b/Dolls.html
@@ -5,7 +5,7 @@
 <head>
 	<meta name="viewport" content="width=800px, initial-scale=1">
 	<meta charset="utf-8">
-	<title>ꕥErika Ornelasꕥ</title>
+	<title>ꕥDollsꕥ</title>
   <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
 	<link href="style.css" rel="stylesheet" type="text/css" media="all">
 	<link href="lastfm.css" rel="stylesheet" type="text/css" media="all">
