--- a/Dolls.html
+++ b/Dolls.html
@@ -49,11 +49,12 @@
   
   <img src="https://files.catbox.moe/pa4bus.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
 	
-  <img src="https://files.catbox.moe/t5hei2.jpeg" width="70%" style="object-fit:cover; justify-content:center;">
 	
 	 <h2>Vanya - 16" Bisque Doll</h2>
-	 <p>balls</p>
+	 <p>coming soon!</p>
 	 <p></p>
+	
+  <img src="https://files.catbox.moe/t5hei2.jpeg" width="80%" style="object-fit:cover; justify-content:center;">
  </div>
 </div>
 </section>
@@ -66,13 +67,25 @@
 <section class="full">
 
   
-  <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/izklia.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  
+  <img src="https://files.catbox.moe/csbxw9.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  
+  <img src="https://files.catbox.moe/o5vy3q.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+	
+  <img src="https://files.catbox.moe/uc7fyo.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  
+  <img src="https://files.catbox.moe/7z3g80.jpeg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  
+  <img src="https://files.catbox.moe/a6vyah.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+	
+  <img src="https://files.catbox.moe/7y8kj2.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  
+  <img src="https://files.catbox.moe/zsvaet.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
   
   <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
-  
-  <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
-	 <h2>Vanya - 16" Bisque Doll</h2>
-	 <p>balls</p>
+	 <h2>null</h2>
+	 <p>coming soon!</p>
 	 <p></p>
  </div>
 </div>
