--- a/About.html
+++ b/About.html
@@ -22,7 +22,13 @@
 <center=left>
 <body>
 
- 
+ <ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
+
 
   <lis>
 		<div class="nav" border="33333;">
