--- a/About.html
+++ b/About.html
@@ -23,23 +23,14 @@
 <body>
 
  <ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="/home">Home</a></li>
+  <li><a href="/contact">Contact</a></li>
+  <li><a href="/about">About</a></li>
+  <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
 </ul>
 
 
-  <lis>
-		<div class="nav" border="33333;">
-				<a href="/" color="border">Home</a>
-		 <p>
-				<a href="/About" >About</a>
-      <p>
-				<a href="/Contact" color="border">Contact</a>
-         <p>
-				<a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/" color="border">Linkedin</a>
-        	</div></lis>
+
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
 	
 <div class="abtcontainer">
