--- a/About.html
+++ b/About.html
@@ -23,7 +23,7 @@
 <body>
 
  <ul>
-  <li><a href="/home">Home</a></li>
+  <li><a href="/">Home</a></li>
   <li><a href="/contact">Contact</a></li>
   <li><a href="/about">About</a></li>
   <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
