--- a/index.html
+++ b/index.html
@@ -22,16 +22,17 @@
   
 <center=left>
 <body>
-  <lis>
-		<div class="nav" border="33333;">
-				<a href="/" color="border">Home</a>
-		 <p>
-				<a href="/About" >About</a>
-      <p>
-				<a href="/Contact" color="border">Contact</a>
-         <p>
-				<a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/" color="border">Linkedin</a>
-        	</div></lis>
+
+	
+ <ul>
+  <li><a href="/">Home</a></li>
+  <li><a href="/contact">Contact</a></li>
+  <li><a href="/about">About</a></li>
+  <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
+</ul>
+
+
+	
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
   <marquee behavior="alternate">
 		    <img src="https://pngimg.com/d/robot_vacuum_PNG29.png" style="width:80px; position:sticky;" title="don't mind the roomba,, clearing up some clutter">
