--- a/404.html
+++ b/404.html
@@ -24,16 +24,14 @@
 
  
 
-  <lis>
-<div class="nav" border="33333;">
-				<a href="/" color="border">Home</a>
-		 <p>
-				<a href="/About" >About</a>
-      <p>
-				<a href="/Contact" color="border">Contact</a>
-         <p>
-				<a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/" color="border">Linkedin</a>
-        	</div></lis>
+  <ul>
+  <li><a href="/">Home</a></li>
+  <li><a href="/contact">Contact</a></li>
+  <li><a href="/about">About</a></li>
+  <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
+</ul>
+
+	
       <p>
 <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
   
