--- a/About.html
+++ b/About.html
@@ -24,8 +24,8 @@
 
    <ul>
   <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
-  <li><a href="/contact">Contact</a></li>
-  <li><a href="/about">About</a></li>
+  <li><a href="/Contact">Contact</a></li>
+  <li><a href="/About">About</a></li>
   <li><a href="/">Home</a></li>
 </ul>
 
