--- a/404.html
+++ b/404.html
@@ -22,13 +22,12 @@
 <center=left>
 <body>
 
- 
 
-  <ul>
-  <li><a href="/">Home</a></li>
-  <li><a href="/contact">Contact</a></li>
-  <li><a href="/about">About</a></li>
+   <ul>
   <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
+  <li><a href="/Contact">Contact</a></li>
+  <li><a href="/About">About</a></li>
+  <li><a href="/">Home</a></li>
 </ul>
 
 	
