--- a/index.html
+++ b/index.html
@@ -23,15 +23,12 @@
 <center=left>
 <body>
 
-	
- <ul>
-  <li><a href="/">Home</a></li>
-  <li><a href="/contact">Contact</a></li>
-  <li><a href="/about">About</a></li>
+   <ul>
   <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
+  <li><a href="/Contact">Contact</a></li>
+  <li><a href="/About">About</a></li>
+  <li><a href="/">Home</a></li>
 </ul>
-
-
 	
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
   <marquee behavior="alternate">
