--- a/About.html
+++ b/About.html
@@ -31,7 +31,7 @@
 
 
 
-  <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
+  <h1 style="position: absolute; top: 5%; left:10%;"><i>Erika Ornelas</I></h1>
 	
 <div class="abtcontainer">
 
