--- a/index.html
+++ b/index.html
@@ -79,20 +79,9 @@
 	
 
 	</section>
+	     </h2>
+		</section>
 	</div>
-	
-
-  
-
-
-  	
- </div>
-
-
-		<p></p>
-
-		<p>
-		</p>
 	<footer>
 	<i>© Erika Ornelas, 2025</i>
 	</footer>
