--- a/Dolls.html
+++ b/Dolls.html
@@ -35,6 +35,22 @@
   
 <div class="container">
 
+<details>
+  <summary>DOLLS</summary>
+
+  Here you'll see some of the dolls I've customized over the years!!
+  <div class=sidebyside>
+  <img src="https://er1k4.neocities.org/Art/Misc/frank.jpg" width="33.33%" style="float:left;">
+  <img src="https://er1k4.neocities.org/Art/Misc/meowlody.jpg" width="33.33%" style="float:left;">
+  <img src="https://er1k4.neocities.org/Art/Misc/daria.jpg" width="33.33%" style="float:left;">
+  <img src="https://er1k4.neocities.org/Art/Misc/Amaya.jpg" width="33.33%" style="float:left;">
+  <img src="https://er1k4.neocities.org/Art/Misc/8CC90F08-7BAD-4D1E-A37A-4B322FCFE8EB.jpg" width="33.33%" style="float:left;">
+  <img src="https://er1k4.neocities.org/Art/Misc/80E3EC36-3AAA-4B2F-BE30-145C51CF35BE.jpg" width="33.33%" style="float:left;">
+  <img src="https://er1k4.neocities.org/Art/Misc/35892499-3772-43A2-95DB-0E840B9A5447%20-%20Copy.jpg" width="33.33%" style="float:left;">
+  <img src="" width="33.33%" style="float:left;">
+</div>
+</details>
+	
 <div class="sidebyside">
 	
 <section class="full">
