--- a/Dolls.html
+++ b/Dolls.html
@@ -29,13 +29,7 @@
   <li><a href="/contact">Contact</a></li>
   <li><a href="/about">About</a></li>
   <li><a href="/">Home</a></li>
-</ul>
-	
-	 <h1 style="left:10%;"><i>Erika Ornelas</I></h1> 
-  
-<div class="container">
-
-<details>
+<li><details></li>
   <summary>work</summary>
   <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
   <li><a href="/contact">Contact</a></li>
@@ -44,6 +38,13 @@
  
 </div>
 </details>
+</ul>
+	
+	 <h1 style="left:10%;"><i>Erika Ornelas</I></h1> 
+  
+<div class="container">
+
+
 	
 <div class="sidebyside">
 	
