--- a/Dolls.html
+++ b/Dolls.html
@@ -31,10 +31,10 @@
   <li><a href="/">Home</a></li>
 <li><details></li>
   <summary>work</summary>
-  <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
-  <li><a href="/contact">Contact</a></li>
-  <li><a href="/about">About</a></li>
-  <li><a href="/">Home</a></li>
+  <a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a>
+  <a href="/contact">Contact</a>
+  <a href="/about">About</a>
+  <a href="/">Home</a>
  
 </div>
 </details>
