--- a/Dolls.html
+++ b/Dolls.html
@@ -32,14 +32,21 @@
 </ul>
 	
 	 <h1 style="left:10%;"><i>Erika Ornelas</I></h1> 
-  
+  <div class="container">
+  <ul style="float:none;">
+  <li><a href="#Vanya">Hand-made Dolls</a></li>
+  <li><a href="#Custom-12">Customized 12" Dolls</a></li>
+  <li><a href="#custom-AG">Customized 18" Dolls</a></li>
+  <li><a href="/">Home</a></li>
+</ul>
+
+
+	  
 <div class="container">
-
-
 	
 <div class="sidebyside">
 	
-<section class="full">
+<section id="Vanya" class="full">
 
   
   <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
@@ -61,7 +68,7 @@
 
 <div class="sidebyside">
 	
-<section class="full">
+<section id="Custom-12" class="full">
 
   
   <img src="https://files.catbox.moe/izklia.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
