--- a/Dolls.html
+++ b/Dolls.html
@@ -31,16 +31,17 @@
   <li><a href="/">Home</a></li>
 </ul>
 	
-	 <h1 style="left:10%;"><i>Erika Ornelas</I></h1> 
+	 <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
+
+	
   <div class="container">
   <ul style="float:none;">
-  <li><a href="#Vanya">Hand-made Dolls</a></li>
-  <li><a href="#Custom-12">Customized 12" Dolls</a></li>
   <li><a href="#custom-AG">Customized 18" Dolls</a></li>
-  <li><a href="/">Home</a></li>
+  <li><a href="#Custom-12">Customized 12" Dolls</a></li>
+  <li><a href="#Vanya">Hand-made Dolls</a></li>
 </ul>
 
-
+  </div>
 	  
 <div class="container">
 	
