--- a/Dolls.html
+++ b/Dolls.html
@@ -34,13 +34,13 @@
 	 <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
 
 	
-
+<div>
   <ul style="float:none;">
   <li><a href="#custom-AG">Customized 18" Dolls</a></li>
   <li><a href="#Custom-12">Customized 12" Dolls</a></li>
   <li><a href="#Vanya">Hand-made Dolls</a></li>
 </ul>
-
+</div>
 
 	  
 <div class="container">
