--- a/Dolls.html
+++ b/Dolls.html
@@ -34,7 +34,7 @@
 	 <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
 
 	
-<div>
+<div class=container style="border-color:transparent; background-color: transparent;">
   <ul style="float:none;">
   <li><a href="#custom-AG">Customized 18" Dolls</a></li>
   <li><a href="#Custom-12">Customized 12" Dolls</a></li>
