--- a/Dolls.html
+++ b/Dolls.html
@@ -73,7 +73,35 @@
   
   <img src="https://files.catbox.moe/izklia.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
   
+
+	 <h2>null</h2>
+	 <p>coming soon!</p>
+	 <p></p>
+ </div>
+</div>
+</section>
+	
+	<div class="container">
+
+<div class="sidebyside">
+	
+<section class="full">
+  
   <img src="https://files.catbox.moe/csbxw9.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  
+ 
+	 <h2>null</h2>
+	 <p>coming soon!</p>
+	 <p></p>
+ </div>
+</div>
+</section>
+
+<div class="container">
+
+<div class="sidebyside">
+	
+<section class="full">
   
   <img src="https://files.catbox.moe/o5vy3q.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
 	
@@ -83,10 +111,23 @@
   
   <img src="https://files.catbox.moe/a6vyah.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
 	
-  <img src="https://files.catbox.moe/7y8kj2.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
   
   <img src="https://files.catbox.moe/zsvaet.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
 	 <h2>null</h2>
+	 <p>coming soon!</p>
+	 <p></p>
+ </div>
+</div>
+</section>
+	
+	<div class="container">
+
+<div class="sidebyside">
+	
+<section id="custom-AG" class="full">
+	
+  <img src="https://files.catbox.moe/7y8kj2.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+	 <h2>Jeannie</h2>
 	 <p>coming soon!</p>
 	 <p></p>
  </div>
