--- a/Dolls.html
+++ b/Dolls.html
@@ -74,8 +74,11 @@
   <img src="https://files.catbox.moe/izklia.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
   
 
-	 <h2>null</h2>
-	 <p>coming soon!</p>
+	 <h2>Honey</h2>
+	 <p>Of all of my customs she was the first that had a level of craftsmanship that I could be proud of. <p>
+		 
+	 </p>
+	Her hair is made of acrylic yarn wefted onto a wig, and beads were threaded on some of the hair as well.</p>
 	 <p></p>
  </div>
 </div>
