--- a/WebDesign.html
+++ b/WebDesign.html
@@ -4,7 +4,7 @@
 <head>
 	<meta name="viewport" content="width=800px, initial-scale=1">
 	<meta charset="utf-8">
-	<title>ꕥDollsꕥ</title>
+	<title>ꕥWeb Designꕥ</title>
   <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
 	<link href="style.css" rel="stylesheet" type="text/css" media="all">
 	<link href="lastfm.css" rel="stylesheet" type="text/css" media="all">
@@ -42,7 +42,7 @@
 </div>
 
 	  
-<div class="container">
+<div class="container" style="background:transparent; outline:0px; border:0px; width:800px; height:450px;">
 	
 <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/FDzZrsNao8lvtrjxwX2yuK/Horder-App?node-id=37-490&starting-point-node-id=37%3A374&embed-host=share" allowfullscreen></iframe>
  </div>
