--- a/WebDesign.html
+++ b/WebDesign.html
@@ -42,7 +42,7 @@
 </div>
 
 	  
-<div class="container" style="background:transparent; outline:0px; border:0px; width:450px; height:800px;">
+<div class="container" style="background:transparent; outline:0px; border:0px; width:450px; height:800px; float:left;">
 	
 <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="450" height="800" src="https://embed.figma.com/proto/FDzZrsNao8lvtrjxwX2yuK/Horder-App?node-id=37-490&starting-point-node-id=37%3A374&embed-host=share" allowfullscreen></iframe>
  </div>
