--- a/WebDesign.html
+++ b/WebDesign.html
@@ -57,7 +57,7 @@
 <section id="Custom-12" class="full">
 
   
-  <img src="https://files.catbox.moe/izklia.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/0yaxzc.png"  style="object-fit:cover; width: 100%; height: 100%; float:none;">
   
 
 	 <h2>Honey</h2>
@@ -70,58 +70,7 @@
 </div>
 </section>
 	
-	<div class="container">
 
-<div class="sidebyside">
-	
-<section class="full">
-  
-  <img src="https://files.catbox.moe/csbxw9.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
-  
- 
-	 <h2>null</h2>
-	 <p>coming soon!</p>
-	 <p></p>
- </div>
-</div>
-</section>
-
-<div class="container">
-
-<div class="sidebyside">
-	
-<section class="full">
-  
-  <img src="https://files.catbox.moe/o5vy3q.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
-	
-  <img src="https://files.catbox.moe/uc7fyo.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
-  
-  <img src="https://files.catbox.moe/7z3g80.jpeg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
-  
-  <img src="https://files.catbox.moe/a6vyah.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
-	
-  
-  <img src="https://files.catbox.moe/zsvaet.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
-	 <h2>null</h2>
-	 <p>coming soon!</p>
-	 <p></p>
- </div>
-</div>
-</section>
-	
-	<div class="container">
-
-<div class="sidebyside">
-	
-<section id="custom-AG" class="full">
-	
-  <img src="https://files.catbox.moe/7y8kj2.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
-	 <h2>Jeannie</h2>
-	 <p>coming soon!</p>
-	 <p></p>
- </div>
-</div>
-</section>
 
 	<footer>
 </footer>
