--- a/WebDesign.html
+++ b/WebDesign.html
@@ -50,14 +50,14 @@
 </section>
 	<p></p>
 	
-<div class="container">
+<div class="container" style="float:right;">
 
 <div class="sidebyside">
 	
 <section id="Custom-12" class="full">
 
   
-  <img src="https://files.catbox.moe/0yaxzc.png"  style="object-fit:cover; width: 100%; height: 100%; float:none;">
+  <img src="https://files.catbox.moe/0yaxzc.png"  style="object-fit:cover;">
 
  </div>
 </div>
