--- a/WebDesign.html
+++ b/WebDesign.html
@@ -50,14 +50,14 @@
 </section>
 	<p></p>
 	
-<div class="container" style="float:right; width:50%;">
+<div class="container" style="float:right; width:50%; height:800px;">
 
 <div class="sidebyside">
 	
 <section id="Custom-12" class="full">
 
   
-  <img src="https://files.catbox.moe/0yaxzc.png"  style="object-fit:cover; width:100%;">
+  <img src="https://files.catbox.moe/0yaxzc.png"  style="object-fit:cover; height:800px;">
 
  </div>
 </div>
