--- a/WebDesign.html
+++ b/WebDesign.html
@@ -57,7 +57,7 @@
 <section id="Custom-12" class="full">
 
   
-  <img src="https://files.catbox.moe/0yaxzc.png"  style="object-fit:cover; height:800px;">
+  <img src="https://files.catbox.moe/0yaxzc.png"  style="object-fit:cover; height:800px; background:transparent; outline:0px; border:0px; ">
 
  </div>
 </div>
