--- a/WebDesign.html
+++ b/WebDesign.html
@@ -35,9 +35,9 @@
 	
 <div class=subnavcontainer>
   <ul style="float:none;">
-  <li><a href="#custom-AG">Customized 18" Dolls</a></li>
-  <li><a href="#Custom-12">Customized 12" Dolls</a></li>
-  <li><a href="#Vanya">Hand-made Dolls</a></li>
+  <li><a href="#custom-AG">-</a></li>
+  <li><a href="#Custom-12">-</a></li>
+  <li><a href="#Vanya">-</a></li>
 </ul>
 </div>
 
