--- a/WebDesign.html
+++ b/WebDesign.html
@@ -50,7 +50,7 @@
 </section>
 	<p></p>
 	
-<div class="container" style="float:right; width:40%; height:800px;">
+<div class="container" style="float:right; width:40%;">
 
 
 
