Update and rename Design.html to GraphicDesign.html

--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -35,9 +35,9 @@
 	
 <div class=subnavcontainer>
   <ul style="float:none;">
-  <li><a href="#custom-AG">Customized 18" Dolls</a></li>
-  <li><a href="#Custom-12">Customized 12" Dolls</a></li>
-  <li><a href="#Vanya">Hand-made Dolls</a></li>
+  <li><a href="#mag">Magazines</a></li>
+  <li><a href="#posters">Posters</a></li>
+  <li><a href="#dig">Digital Publications</a></li>
 </ul>
 </div>
 
@@ -46,14 +46,26 @@
 	
 <div class="sidebyside">
 	
-<section id="Vanya" class="full">
+<section id="dig" class="full">
 
   
-  <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/1h3enc.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
   
-  <img src="https://files.catbox.moe/w2bryr.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/lpi14k.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
   
-  <img src="https://files.catbox.moe/pa4bus.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/oyolz0.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+	
+  <img src="https://files.catbox.moe/yocv3v.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  
+  <img src="https://files.catbox.moe/r9hrw2.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  
+  <img src="https://files.catbox.moe/r9hrw2.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+	
+  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  
+  <img src="" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  
+  <img src="" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
 	
 	
 	 <h2>Vanya - 16" Bisque Doll</h2>
@@ -68,7 +80,7 @@
 
 <div class="sidebyside">
 	
-<section id="Custom-12" class="full">
+<section id="posters" class="full">
 
   
   <img src="https://files.catbox.moe/izklia.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
@@ -88,7 +100,7 @@
 
 <div class="sidebyside">
 	
-<section class="full">
+<section id="mag" class="full">
   
   <img src="https://files.catbox.moe/csbxw9.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
   
