--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -49,23 +49,19 @@
 <section id="dig" class="full">
 
   
-  <img src="https://files.catbox.moe/1h3enc.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
   
-  <img src="https://files.catbox.moe/lpi14k.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
-  
-  <img src="https://files.catbox.moe/oyolz0.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/lpi14k.png" width="33.33%" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/yocv3v.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/1h3enc.png" width="33.33%" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/r9hrw2.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
-  
-  <img src="https://files.catbox.moe/r9hrw2.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/oyolz0.png" width="33.33%" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/yocv3v.png" width="33.33%" style="object-fit:cover; float:left;">
   
-  <img src="" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
-  
-  <img src="" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/r9hrw2.png" width="33.33%" style="object-fit:cover;  float:left;">
+	
+  <img src="https://files.catbox.moe/okn633.png" width="33.33%" style="object-fit:cover; float:left;">
+
 	
 	
 	 <h2>Vanya - 16" Bisque Doll</h2>
